objects/ssot__PlanBenefitItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationNoteText__c</fullName>
        <label>Additional Information Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitCategoryText__c</fullName>
        <label>Benefit Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageLevelName__c</fullName>
        <label>Coverage Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Plan Benefit Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoverageAmount__c</fullName>
        <label>In Network Coverage Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsInPlanNetwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Plan Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoverageAmount__c</fullName>
        <label>Outof Network Coverage Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PlanBenefitId__c</fullName>
        <label>Plan Benefit</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeCodeText__c</fullName>
        <label>Service Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeText__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TimePeriodDescription__c</fullName>
        <label>Time Period Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716723732444_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PlanBenefitItem_PlanBenefitId_map_Pl_rel</label>
        <referenceTo>ssot__PlanBenefit__dlm</referenceTo>
        <relationshipLabel>PlanBenefitItem_PlanBenefitId_map_Pl_rel</relationshipLabel>
        <relationshipName>rel_1716723732444_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>